IN PROGRESS v0.5.6 - SVN

            Saturday February 17th, 2007
        
            New Features
            ------------

            * New ability to tag patch banks

              By tagging patch banks, you can change the way Freewheeling
              responds depending on which patches you have selected. 

              For example, I use Freewheeling with a B3 organ softsynth. 
              My organ patches are arranged in a patch bank. I've tagged that
              patch bank, and configured Freewheeling to respond differently
              when that patch bank is active. So, when I am on an organ patch,
              my faders control the B3 drawbars instead of their usual
              Freewheeling functions.
        
              You can, of course, change any of Freewheeling's behaviors
              depending on the patch bank selected. 
        
              For more info, check the 'SYSTEM_cur_patchbank_tag' variable 
              in the configuration.
              
            * Receive and transmit MIDI channel pressure (aftertouch) messages

            * New 'routethroughpatch' configuration option for MIDI 
              events allows you to send deliberate MIDI messages to the 
              port(s) and channel(s) for the current patch. 
              
              An example configuration is provided that changes the behavior 
              of the modwheel (CC #1). When enabled, the modwheel value is 
              modulated by aftertouch. This allows me to control vibrato 
              (CC #1) on my softsynths with pressure on the keys. 
              The modwheel and pressure values are summed together and 
              sent out as a control change message.

              If I am playing several softsynth channels from my one keyboard,
              the aftertouch then affects all the channels seamlessly.
                
            Fixes
            -----

            * Fixed problem installing configuration files from